tests/compiler/diagnostics-engine/tests/missing-semicolon/expected.txt
error: Missing semicolon.
 --> source.jack:2:35
  |
2 |     field int x, missing_semicolon
  |                                   ^
